--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<!-- <spring.version>4.2.1.RELEASE</spring.version> -->
 	</properties>
 
 	<parent>
